--- a/FunPayApp/FunPayApp/FunPayApp.Android/Properties/AndroidManifest.xml
+++ b/FunPayApp/FunPayApp/FunPayApp.Android/Properties/AndroidManifest.xml
@@ -3,7 +3,7 @@
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="26" />
 	<application android:label="FunPayApp.Android">
     <meta-data android:name="com.google.android.maps.v2.API_KEY"
-               android:value="" />
+               android:value="AIzaSyBE3AOuR__LI-keCn_YfHlR7bZYk3k9nH0" />
   </application>
 	<uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
